--- a/ITI.ItSchool/Views/BackOffice/index.cshtml
+++ b/ITI.ItSchool/Views/BackOffice/index.cshtml
@@ -22,6 +22,7 @@
     </script>
 </head>
 <body>
+    <script>console.log( "L25" );</script>
     <section class="row">
         <img src="~/Images/LOGO_360.png" class="img-responsive" />
     </section>
