Creation of the mini-paint application (in progress).

--- a/ITI.ItSchool/Content/style.css
+++ b/ITI.ItSchool/Content/style.css
@@ -49,6 +49,17 @@ p {
 	padding: 1% 0% 5% 3%;
 }
 
+.redColors {
 
+}
 
+.blueColors {
+    margin-top: 150px;
+    margin-bottom: 150px;
+    margin-right: 150px;
+    margin-left: 200px;
+}
 
+.yellowColors {
+
+}
