Some colors added on the paint application.

--- a/ITI.ItSchool/Content/Site.css
+++ b/ITI.ItSchool/Content/Site.css
@@ -42,15 +42,22 @@ textarea {
     margin-right: 400px;
     margin-left: 160px;
     margin-top: -125px;
+}
 
 .orangeColors {
-
+    margin-right: 400px;
+    margin-left: 160px;
+    margin-top: -125px;
 }
 
 .cyanColors {
-
+    margin-right: 400px;
+    margin-left: 160px;
+    margin-top: -125px;
 }
 
 .greyColors {
-
+    margin-right: 400px;
+    margin-left: 160px;
+    margin-top: -125px;
 }
