--- a/ITI.ItSchool/Views/Draw/Painting.cshtml
+++ b/ITI.ItSchool/Views/Draw/Painting.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Dessin libre</h2>
-<canvas id="canvas" width="1024" height="350" style="border:1px solid #000000;"></canvas>
+<canvas id="canvas" width="1200" height="380" style="border:1px solid #000000;"></canvas>
 <script src="~/Scripts/jquery-2.1.3.js"></script>
 <script src="~/Scripts/painting.js"></script>
 <div class="redColors">
@@ -42,4 +42,24 @@
     <div id="pink4" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(255, 20, 147);"></div>
     <div id="pink5" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(199, 21, 133);margin-bottom:5px; margin-top:5px"></div>
 </div>
-
+<div class="orangeColors">
+    <div id="orange" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(255, 127, 80);"></div>
+    <div id="orange2" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(255, 99, 71);margin-bottom:5px; margin-top:5px"></div>
+    <div id="orange3" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(255, 69, 0);"></div>
+    <div id="orange4" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(255, 140, 0);margin-bottom:5px; margin-top:5px"></div>
+    <div id="orange5" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(255, 165, 0);"></div>
+</div>
+<div class="cyanColors">
+    <div id="cyan" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(176, 224, 230);margin-bottom:5px; margin-top:5px"></div>
+    <div id="cyan2" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(173, 216, 230);"></div>
+    <div id="cyan3" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(135, 206, 235);margin-bottom:5px; margin-top:5px"></div>
+    <div id="cyan4" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(135, 206, 250);"></div>
+    <div id="cyan5" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(0, 191, 255);margin-bottom:5px; margin-top:5px"></div>
+</div>
+<div class="greyColors">
+    <div id="grey" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(211, 211, 211);"></div>
+    <div id="grey2" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(192, 192, 192);margin-bottom:5px; margin-top:5px"></div>
+    <div id="grey3" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(169, 169, 169);"></div>
+    <div id="grey4" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(128, 128, 128);margin-bottom:5px; margin-top:5px"></div>
+    <div id="grey5" style="width:20px;height:20px;border:1px solid #000;background-color: rgb(105, 105, 105);"></div>
+</div>
