Updating AngularJS Routing + Adding Teacher's templates pages (Login + Connection)

--- a/ITI.ItSchool/Templates/KidLoginPage.html
+++ b/ITI.ItSchool/Templates/KidLoginPage.html
@@ -4,12 +4,12 @@
 
             <md-input-container style="width:15%">
                 <label>Pseudo</label>
-                <input type="text" name="pseudo" required>
+                <input type="text" ng-model="user.pseudo" name="pseudo" ng-required="true">
             </md-input-container>
 
             <md-input-container style="width:15%">
                 <label>Mot de passe</label>
-                <input type="password" name="password">
+                <input type="password" ng-model="user.password" name="password" ng-required="true">
             </md-input-container>
             <br />
             <md-button class="md-raised md-primary">Connexion</md-button>
