Update with Drag & Drop Exercice Integration

--- a/ITI.ItSchool/Templates/TeacherLobbyPage.html
+++ b/ITI.ItSchool/Templates/TeacherLobbyPage.html
@@ -11,9 +11,7 @@
     <section class="row">
         <div class="bs-example">
             <ul class="nav nav-tabs" id="myTab">
-                <li><a data-toggle="tab" href="#sectionA">Ajouter un exercice</a></li>
-                <li><a data-toggle="tab" href="#sectionB">Modifier un exercice</a></li>
-                <li><a data-toggle="tab" href="#sectionC">Supprimer un exercice</a></li>
+                <li><a data-toggle="tab" href="#!/teacher/exercices">Sélectionner un exercice</a></li>
             </ul>
             <div class="tab-content">
                 <div id="sectionA" class="tab-pane fade in active">
