--- a/ITI.ItSchool/Views/TexteTrous/ClozeExercise.cshtml
+++ b/ITI.ItSchool/Views/TexteTrous/ClozeExercise.cshtml
@@ -3,11 +3,12 @@
     ViewBag.Title = "ClozeExercise";
 }
 
-<h2>ClozeExercise</h2>
+<h2>Texte à trous</h2>
 <script src="~/Scripts/cloze-game.js"></script>
-<form name="exercise">
-    <p>La somme des 3 angles d'un triangle equilatéral est égale à <input type="text" id="word" maxlength="3"/></p>
-</form>
+
+Hello! My name <input type="text" maxlength="2" id="sentence1" /> Brian.<br/>
+Where <input type="text" maxlength="3" id="sentence2" /> you? <br />
+The sky is <input type="text" maxlength="4" id="sentence3" />.<br />
 
 
 
