--- a/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
@@ -3,12 +3,12 @@
         <h1>{{Message}}</h1>
         <form name="ClozeExercise" ng-submit="SaveData()">
             <textarea ng-model="Game.Data"></textarea><br />
-            <select ng-model="Game.Level">
+            <select ng-model="Game.Level.Name">
                 <option value="easy">Facile</option>
                 <option value="middle">Moyen</option>
             </select>
             <md-button class="md-raised md-primary" type="submit" name="saveText">{{Button}}</md-button>
-            Debug message : currently selected : {{ {"selected item": Game.Level} }}
+            Debug message : currently selected : {{ {"selected item": Game.Level.Name} }}
         </form>
     </center>
 </div>
