--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
     <script src="../Components/angular-animate/angular-animate.js"></script>
     <script src="../Components/angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
+    <script src="~/Scripts/jquery-2.1.3.js"></script>
     @RenderSection( "Scripts", required: false )
 </body>
 </html>
