--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="~/Content/Draggable.css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <script src="~/Scripts/jquery-2.1.3.min.js"></script>
 
     <!-- Bootstrap -->
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" media="screen">
