--- a/ITI.ItSchool/Templates/KidRegistrationPage.html
+++ b/ITI.ItSchool/Templates/KidRegistrationPage.html
@@ -45,18 +45,26 @@
                     <md-input-container style="width:10%">
                         <label>Pseudo</label>
                         <input type="text" ng-model="LoginData.Username" name="cUsername" ng-class="Submitted?'ng-dirty':''" required>
-                        <span class="error" ng-show="(LoginData.cUsername.$dirty || Submitted) && LoginData.cUsername.$error.required">Username required</span>
+                        <span class="error" ng-show="(LoginData.cUsername.$dirty || submitted) && LoginForm.cUsername.$error.required">Username required</span>
                     </md-input-container>
                     <br />
                     <md-input-container style="width:10%">
                         <label>Mot de passe</label>
                         <input type="password" ng-model="LoginData.Password" name="cPassword" ng-class="Submitted?'ng-dirty':''" required>
-                        <span class="error" ng-show="(LoginData.cPassword.$dirty || Submitted) && LoginData.cPassword.$error.required">Password required</span>
+                        <span class="error" ng-show="(LoginData.cPassword.$dirty || submitted) && LoginForm.cPassword.$error.required">Password required</span>
                     </md-input-container>
                     <br />
                     <md-button class="md-raised md-primary" value="Login" type="submit">Connexion</md-button>
                 </div>
             </form>
+            <div ng-show="IsLogedIn">
+                <md-button class="md-fab" aria-label="FAB" href="#!/teacher/">
+                    <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
+                </md-button>
+                <md-button class="md-fab" aria-label="FAB" href="#!/teacher/lobby">
+                    <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
+                </md-button>
+            </div>
         </div>
     </center>
 </div>
