--- a/ITI.ItSchool/Templates/TeacherRegistrationPage.html
+++ b/ITI.ItSchool/Templates/TeacherRegistrationPage.html
@@ -30,7 +30,7 @@
                     <input type="password" ng-model="User.Password" name="uPassword" placeholder="Mot de passe..." ng-class="submitted?'ng-dirty':''" required autofocus />
                     <span class="error" ng-show="(RegisterForm.uPassword.$dirty || submitted) && RegisterForm.uPassword.$error.required">Le mot de passe doit être entré !</span>
                 </md-input-container>
-                <md-select ng-model="User.Grade.Name" placeholder="Classe">
+                <md-select ng-model="User.Grade.Name" placeholder="Classe" required>
                     <md-option ng-repeat="grade in Grades" value="{{grade.Name}}" ng-model="User.Grade.Name">{{grade.Name}}</md-option>
                 </md-select>
                 <br />
