Cloze exercise settings beginning.

--- a/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
@@ -4,7 +4,7 @@
         <form name="ClozeExercise" ng-submit="SaveData()">
             <textarea ng-model="Game.Data"></textarea><br />
             <select ng-model="Game.Level.Name">
-                <option value="easy">Facile</option>
+                <option value="facile">Facile</option>
                 <option value="middle">Moyen</option>
             </select>
             <md-button class="md-raised md-primary" type="submit" name="saveText">{{Button}}</md-button>
