Update with kid's pages

--- a/ITI.ItSchool/Templates/KidLoginPage.html
+++ b/ITI.ItSchool/Templates/KidLoginPage.html
@@ -19,10 +19,10 @@
             </div>
         </form>
         <div ng-show="IsLogedIn">
-            <md-button class="md-fab" aria-label="FAB" href="#!/teacher/">
+            <md-button class="md-fab" aria-label="FAB" href="#!/kid/">
                 <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
             </md-button>
-            <md-button class="md-fab" aria-label="FAB" href="#!/teacher/lobby">
+            <md-button class="md-fab" aria-label="FAB" href="#!/kid/lobby">
                 <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
             </md-button>
         </div>
