--- a/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeClozeExercisePage.html
@@ -5,10 +5,11 @@
             <textarea ng-model="Game.Data"></textarea><br />
             <select ng-model="Game.Level.Name">
                 <option value="facile">Facile</option>
-                <option value="middle">Moyen</option>
+                <option value="moyen">Moyen</option>
             </select>
             <md-button class="md-raised md-primary" type="submit" name="saveText">{{Button}}</md-button>
             Debug message : currently selected : {{ {"selected item": Game.Level.Name} }}
+            Debug message : current text : [ {{ Game.Data  }}]
         </form>
     </center>
 </div>
