Add Drag and Drop

--- a/ITI.ItSchool/Views/Home/Index.cshtml
+++ b/ITI.ItSchool/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
     <script src="~/Scripts/Routing.js"></script>
     <script src="~/Scripts/material-call-app.js"></script>
     <script src="~/Scripts/interact-1.2.4.min.js"></script>
-    <script src="~/Scripts/draggable.js"></script>
-    <script src="~/Scripts/DropImpair.js"></script>
-    <script src="~/Scripts/DropPair.js"></script>
+    <script src="~/Scripts/jquery-ui.js"></script>
+    <script src="~/Scripts/jquery.js"></script>
+    <script src="~/Scripts/DragNDrop.js"></script>
 }
