--- a/ITI.ItSchool/Templates/KidRegistrationPage.html
+++ b/ITI.ItSchool/Templates/KidRegistrationPage.html
@@ -38,32 +38,38 @@
                 <md-button class="md-raised md-primary" value="{{submitText}}" type="submit">{{submitText}}</md-button>
             </div>
         </form>
-        <div ng-show="IsRegistered">
-            <form novalidate name="LoginForm" ng-submit="Login()">
-                <div ng-show="!IsLogedIn">
-                    <md-input-container style="width:10%">
-                        <label>Pseudo</label>
-                        <input type="text" ng-model="LoginData.Username" name="cUsername" ng-class="Submitted?'ng-dirty':''" required autofocus>
-                        <span class="error" ng-show="(LoginData.cUsername.$dirty || submitted) && LoginForm.cUsername.$error.required">Username required</span>
-                    </md-input-container>
-                    <br />
-                    <md-input-container style="width:10%">
-                        <label>Mot de passe</label>
-                        <input type="password" ng-model="LoginData.Password" name="cPassword" ng-class="Submitted?'ng-dirty':''" required autofocus>
-                        <span class="error" ng-show="(LoginData.cPassword.$dirty || submitted) && LoginForm.cPassword.$error.required">Password required</span>
-                    </md-input-container>
-                    <br />
-                    <md-button class="md-raised md-primary" value="Login" type="submit">Connexion</md-button>
+        <div ng-show="!IsTeacher">
+            <div ng-show="IsRegistered">
+                <form novalidate name="LoginForm" ng-submit="Login()">
+                    <div ng-show="!IsLogedIn">
+                        <md-input-container style="width:10%">
+                            <label>Pseudo</label>
+                            <input type="text" ng-model="LoginData.Username" name="cUsername" ng-class="Submitted?'ng-dirty':''" required autofocus>
+                            <span class="error" ng-show="(LoginData.cUsername.$dirty || submitted) && LoginForm.cUsername.$error.required">Username required</span>
+                        </md-input-container>
+                        <br />
+                        <md-input-container style="width:10%">
+                            <label>Mot de passe</label>
+                            <input type="password" ng-model="LoginData.Password" name="cPassword" ng-class="Submitted?'ng-dirty':''" required autofocus>
+                            <span class="error" ng-show="(LoginData.cPassword.$dirty || submitted) && LoginForm.cPassword.$error.required">Password required</span>
+                        </md-input-container>
+                        <br />
+                        <md-button class="md-raised md-primary" value="Login" type="submit">Connexion</md-button>
+                    </div>
+                </form>
+                <div ng-show="IsLogedIn">
+                    <md-button class="md-fab" aria-label="FAB" href="#!/kid/">
+                        <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
+                    </md-button>
+                    <md-button class="md-fab" aria-label="FAB" href="#!/kid/lobby">
+                        <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
+                    </md-button>
                 </div>
-            </form>
-            <div ng-show="IsLogedIn">
-                <md-button class="md-fab" aria-label="FAB" href="#!/kid/">
-                    <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
-                </md-button>
-                <md-button class="md-fab" aria-label="FAB" href="#!/kid/lobby">
-                    <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
-                </md-button>
             </div>
         </div>
+        <div ng-show="IsTeacher">
+            <md-button class="md-raised md-primary" href="#!/teacher/">Espace Professeur</md-button>
+        </div>
+        
     </center>
 </div>
