Add Battle Card Game
Add in Images redCard.svg
Add in Scripts flipclock.js, snap.svg.js and battleCardGame.js
Add in Templates TeacherCustomizeBattleCardPage.html
Update in Templates TeacherSelectExercicesPage.html

--- a/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
@@ -4,7 +4,7 @@
         <table>
             <tr>
                 <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/drag_drop">Glissé-Déposé</md-button></td>
-                <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/memory">Jeu de mémoire</md-button></td>
+                <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/battleCard">Card Game</md-button></td>
                 <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/dictation">Dictée</md-button></td>
                 <td><md-button class="md-raised md-primary" href="#!/teacher/exercices/cloze_exercise">Texte à trous</md-button></td>
             </tr>
