Add controller TeacherCustomizeDragAndDropMathsPage, TeacherSelectMatterPage

--- a/ITI.ItSchool/Templates/KidDragAndDropExercice.html
+++ b/ITI.ItSchool/Templates/KidDragAndDropExercice.html
@@ -1,12 +1,12 @@
 ﻿<div ng-controller="TeacherSelectExercicesController">
     <div id="content">
         <div id="subContent">
-            <div id="cardPile"> </div>
-            <div id="cardSlots"> </div>
+            <div id="cardPile"></div>
+            <div id="cardSlots"></div>
         </div>
 
         <div id="successMessage">
-            <h2>You did it!</h2>
+            <h2>Bravo ! Tu as gagné.</h2>
             <button onclick="init()">Play Again</button>
         </div>
 
