--- a/ITI.ItSchool/Content/style.css
+++ b/ITI.ItSchool/Content/style.css
@@ -22,7 +22,7 @@ ul{
     width: 30%;
 }
 .nav-pills > li{
-	margin: none;
+	margin: 0px;
 }
 .nav-pills > li > a {
     border-radius: 0px;
@@ -125,9 +125,9 @@ h1, h2, h3, h4 {
 }
  
 #cardSlots, #cardPile {
-  width: 910px;
-  height: 120px;
-  padding: 20px;
+  width: auto;
+  height: 50%;
+  padding: 30px 10px 0px 40px;
   border: 2px solid #333;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
@@ -141,16 +141,14 @@ h1, h2, h3, h4 {
  
 #cardSlots div, #cardPile div {
   float: left;
-  width: 58px;
-  height: 78px;
-  padding: 10px;
-  padding-top: 40px;
-  padding-bottom: 0;
+  width: 60px;
+  height: 80px;
+  padding: 38px 55px 0px;
   border: 2px solid #333;
   -moz-border-radius: 10px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
-  margin: 0 0 0 10px;
+  margin: 0 45px 15px 0px;
   background: #fff;
 }
  
@@ -204,5 +202,5 @@ h1, h2, h3, h4 {
   padding: 20px;
 }
 
-/*Drag and drop end*/
 
+/*Drag and drop end*/
