--- a/ITI.ItSchool/Templates/TeacherCustomizeDragAndDropMathsPage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeDragAndDropMathsPage.html
@@ -1,4 +1,4 @@
-﻿<div ng-controller="TeacherDragAndDropController">
+﻿<div ng-controller="TeacherDragAndDropMathsController">
     <center>
         <h1>{{Message}}</h1>
         <br />
@@ -6,20 +6,18 @@
             <div id="content">
 
                 <div id="inputNumbers">
-                    <h2>tape 5 nombres pairs et 5 nombres impairs : </h2>
+                    <h2>Tape 5 nombres pairs et 5 nombres impairs : </h2>
                     <input type="text" id="number" />
                     <button onclick="init()" id="check">chek</button>
                 </div><br />
 
                 <div id="subContent">
-                    <div id="cardPile"> </div>
-                    <div id="cardSlots"> </div>
+                    <div id="cardPile"></div>
+                    <div id="cardSlots"></div>
                 </div>
             </div>
             <input type="submit" name="save" value="Sauvegarder" />
         </form>
     </center>
-
-    <div id="zone-pair" class="dropzonePair">Zone Paire</div>
-    <div id="zone-impair" class="dropzoneImpair">Zone impaire</div>
+    <script src="../Scripts/DragNDrop.js"></script>
 </div>
