--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -5,10 +5,11 @@
     <title>@ViewBag.Title</title>
     <link href="~/Components/angular-material/angular-material.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="~/Content/Draggable.css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
     <script src="~/Scripts/jquery-2.1.3.min.js"></script>
+    <script src="~/Scripts/jquery-ui.js"></script>
+    <script src="~/Scripts/jquery.js"></script>
 
     <!-- Bootstrap -->
     <link href="~/Content/bootstrap-theme.min.css" rel="stylesheet" media="screen">
