--- a/ITI.ItSchool/Templates/TeacherCustomizeDictationPage.html
+++ b/ITI.ItSchool/Templates/TeacherCustomizeDictationPage.html
@@ -31,7 +31,7 @@
             </form>
         </div>
         <div ng-show="MediumSelected">
-            <h1>{{Message}</h1>
+            <h1>{{Message}}</h1>
         </div>
         <div ng-show="HardSelected">
             <h1>{{Message}}</h1>
