--- a/ITI.ItSchool/Content/BattleCardCss/battleCardGame.css
+++ b/ITI.ItSchool/Content/BattleCardCss/battleCardGame.css
@@ -43,8 +43,8 @@ svg#gameZone {
 	padding-bottom: 20px;
 	border-radius: 5px;
 	bottom: 1em;
-	width: 650px;
-	height: 250px;
+	width: 55%;
+	height: 50%;
 }
 
 #deal {
@@ -55,8 +55,8 @@ svg#gameZone {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	bottom: 1em;
-	width: 190px;
-	height: 250px;
+	width: 18%;
+	height: 50%;
 	right: 1em;
 }
 
@@ -64,12 +64,20 @@ svg#gameZone {
 	display: inline-block;
 	border: 1px solid #000000;
 	border-radius: 5px;
-	width: 150px;
-	height: 200px;
+	width: 24%;
+	height: 100%;
+}
+
+#cardToFind{
+    display: inline-block;
+	border: 1px solid #000000;
+	border-radius: 5px;
+	width: 73%;
+	height: 100%;
 }
 
 #hand .card + .card {
-	margin-left: -50px;
+	margin-left: -8%;
 }
 
 #hand .card:first-child {
